[package]
name = "security-bounty"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "=7.0.17", default-features = false }
linera-sdk = { git = "https://github.com/linera-io/linera-protocol.git", branch = "main" }
futures = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

[dev-dependencies]
linera-sdk = { git = "https://github.com/linera-io/linera-protocol.git", branch = "main", features = [
    "test",
    "wasmer",
] }
tokio = { version = "1.40", features = ["rt", "sync"] }

# This overrides the git dependency with local path when developing
[patch.'https://github.com/linera-io/linera-protocol.git']
linera-sdk = { path = "../../linera-protocol/linera-sdk" }

[[bin]]
name = "security_bounty_contract"
path = "src/contract.rs"

[[bin]]
name = "security_bounty_service"
path = "src/service.rs"

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'
